# handoff-forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  DECISIONS.md  HANDOFF.md  Makefile  NEXT_CHAT_HANDOFF.md  PROJECT_STATE.md  README.md  SECURITY.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
plans/: PLAN_feat-handoff-append.md  PLAN_fix-tasks-insertion.md  PLAN_phase2-handoff-forge.md  PLAN_phase3-validate-command.md  PROMPT_grep-loop.md
reviews/: PR_1_review.md  PR_1_review_template.md  PR_2_review.md
src/handoff_forge/: cli.py
src/handoff_forge/services/: file_ops.py  templates.py
tests/: test_agent_commands.py  test_cli.py  test_cli_commands.py  test_file_ops.py  test_templates.py
