[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "handoff-forge"
version = "0.1.0"
description = "CLI tool for generating AI engineering session handoff files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
handoff-forge = "handoff_forge.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
