[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "handoff-forge"
version = "0.1.0"
description = "CLI tool for generating AI engineering session handoff files"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Abdilamir", email = "abdialamirs@gmail.com" }]
keywords = ["handoff", "ai", "agentic", "cli", "session", "engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Repository = "https://github.com/Abdilamir/handoff-forge"
Issues = "https://github.com/Abdilamir/handoff-forge/issues"

[project.scripts]
handoff-forge = "handoff_forge.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
